Fixed the styling so that the immediate child tab of a collapsed folder should have the icon rotated (as opposed to all descendent tabs).

--- a/public/scss/directory_tree.scss
+++ b/public/scss/directory_tree.scss
@@ -32,7 +32,7 @@
 }
 
 .DirectoryTree.collapsed {
-  .tab::before {
+  > .tab::before {
     transform: rotate(0deg);
   }
 
